# print3d-skill

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.specify/memory/: constitution.md
docs/: feature-chunking-strategy.md  kickoff-prompt.md  vision.md
docs/research/: 01-visual-feedback-architecture.md  02-skill-architecture-specification.md  03-open-source-toolchain-integration.md  04-common-problems-workflows-pain-points.md
eval/: README.md
eval/001-resize-headset-holder/: README.md
specs/001-core-infrastructure/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-mesh-analysis-repair/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-parametric-cad/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-model-modification/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-gcode-validation-slicing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-print-diagnosis/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/print3d_skill/: __init__.py  exceptions.py  router.py
tests/: conftest.py
tests/contract/: test_modify_api.py  test_public_api.py  test_validate_api.py
tests/fixtures/: sample.scad
tests/integration/: test_analysis.py  test_export.py  test_knowledge_query.py  test_modify_comparison.py  test_modify_pipeline.py  test_pipeline.py  test_render_pipeline.py  test_repair.py  test_slicing_pipeline.py  test_tool_discovery.py  test_validate_pipeline.py
(+133 files in other folders)
